# Dubby

./: .env.example  .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json  wrangler.jsonc
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements-worker.txt  requirements.txt
api/app/: __init__.py  auth.py  billing.py  config.py  deps.py  errors.py  local_step12.py  main.py  remote_media.py  revenuecat.py  schemas.py
api/app/db/: __init__.py  base.py  postgres.py  supabase_rest.py
api/app/routers/: admin.py  billing.py  credits.py  health.py  jobs.py  projects.py  segments.py  uploads.py
api/app/storage/: __init__.py  r2.py
api/app/worker/: diarization.py  elevenlabs_client.py  engine.py  errors.py  lipsync.py  media.py  openai_client.py  pipeline.py  runner.py  stems.py  subtitles.py  timing.py
api/dubby_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: test_admin.py  test_billing.py  test_lipsync_client.py  test_local_step12.py  test_pipeline_commands.py  test_pipeline_e2e_mock.py  test_pipeline_units.py  test_remote_media.py  test_smoke.py
docs/: MOBILE_RELEASE_CHECKLIST.md
functions/api/: waitlist.ts
infra/: Caddyfile  DEPLOY.md  docker-compose.yml
infra/scripts/: bootstrap-lightsail.sh  deploy.sh
src/app/: globals.css  layout.tsx
src/lib/: api.test.ts  api.ts  consent.ts  demo-api.ts  job-labels.ts  local-step12.ts  mobile.test.ts  mobile.ts  revenuecat.ts  supabase.ts  (+1 more)
(+88 files in other folders)
